Change UserInfo struct
