# production/internal/handler/notification/schema.gen.go
@@ -59,6 +59,8 @@ type TweetInfo struct {
 type UserInfo struct {
 	Bio             string `json:"bio"`
 	IsAdmin         bool   `json:"is_admin"`
+	IsFollowed      bool   `json:"is_followed"`
+	IsFollowing     bool   `json:"is_following"`
 	IsPrivate       bool   `json:"is_private"`
 	ProfileImageUrl string `json:"profile_image_url"`
 	UserId          string `json:"user_id"`
@@ -68,6 +70,8 @@ type UserInfo struct {
 // UserInfoWithoutBio defines model for UserInfoWithoutBio.
 type UserInfoWithoutBio struct {
 	IsAdmin         bool   `json:"is_admin"`
+	IsFollowed      bool   `json:"is_followed"`
+	IsFollowing     bool   `json:"is_following"`
 	IsPrivate       bool   `json:"is_private"`
 	ProfileImageUrl string `json:"profile_image_url"`
 	UserId          string `json:"user_id"`
