# production/internal/handler/tweet/schema.gen.go
@@ -73,6 +73,8 @@ type TweetNodes = []TweetNode
 type UserInfo struct {
 	Bio             string `json:"bio"`
 	IsAdmin         bool   `json:"is_admin"`
+	IsFollowed      bool   `json:"is_followed"`
+	IsFollowing     bool   `json:"is_following"`
 	IsPrivate       bool   `json:"is_private"`
 	ProfileImageUrl string `json:"profile_image_url"`
 	UserId          string `json:"user_id"`
@@ -82,6 +84,8 @@ type UserInfo struct {
 // UserInfoWithoutBio defines model for UserInfoWithoutBio.
 type UserInfoWithoutBio struct {
 	IsAdmin         bool   `json:"is_admin"`
+	IsFollowed      bool   `json:"is_followed"`
+	IsFollowing     bool   `json:"is_following"`
 	IsPrivate       bool   `json:"is_private"`
 	ProfileImageUrl string `json:"profile_image_url"`
 	UserId          string `json:"user_id"`
